--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -48,6 +48,7 @@
     %link{ crossorigin: 'anonymous', href: 'https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity: 'sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', rel: 'stylesheet' }
     %link{ href: 'https://fonts.googleapis.com/css?family=Lato|Work+Sans', rel: 'stylesheet' }
     %link{ href: 'https://fonts.googleapis.com/css?family=Bangers&display=swap', rel: 'stylesheet' }
+    %link{ href: 'https://fonts.googleapis.com/css?family=Work+Sans&display=swap', rel: 'stylesheet' }
     %link{ href: 'https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css', rel: 'stylesheet' }
     = stylesheet_link_tag 'site'
 
@@ -67,4 +68,3 @@
     .container
       = yield
       = google_analytics_tag
-
