--- a/source/partials/_future.html.haml
+++ b/source/partials/_future.html.haml
@@ -2,35 +2,5 @@
 %p
   This year I'm trying something a little different by setting quarterly goals.
 %br
-%table.table
-  %thead
-    %tr
-      %th Goal
-      %th Progress
-      %th Est. completion
-  %tbody
-    %tr
-      %td Get a tattoo
-      %td
-        .progress
-          .progress-bar{ 'aria-valuemax' => '100', 'aria-valuemin' => '0', 'aria-valuenow' => '75', role: 'progressbar', style: 'width: 75%' }
-      %td Q1
-    %tr
-      %td Start taking drum lessons
-      %td
-        .progress
-          .progress-bar{ 'aria-valuemax' => '100', 'aria-valuemin' => '0', 'aria-valuenow' => '50', role: 'progressbar', style: 'width: 50%' }
-      %td Q2
-    %tr
-      %td Rescue a dog
-      %td
-        .progress
-          .progress-bar{ 'aria-valuemax' => '100', 'aria-valuemin' => '0', 'aria-valuenow' => '10', role: 'progressbar', style: 'width: 10%' }
-      %td Q3
-    %tr
-      %td Start the skydiving license journey
-      %td
-        .progress
-          .progress-bar{ 'aria-valuemax' => '100', 'aria-valuemin' => '0', 'aria-valuenow' => '0', role: 'progressbar', style: 'width: 0%' }
-      %td Q4
-
+- goals2020 = data.goals.select { |goal| goal.year == "2020" }
+= partial('partials/goals_table', locals: { goals: goals2020 })
