--- a/source/partials/_goals_table.html.haml
+++ b/source/partials/_goals_table.html.haml
@@ -15,7 +15,7 @@
           %td
             .progress
               .progress-bar{ 'aria-valuemax' => '100', 'aria-valuemin' => '0', 'aria-valuenow' => "#{goal.progress}", role: 'progressbar', style: "width: #{goal.progress}%" }
-                .progress-label
+                .progress-label.d-none.d-md-block
                   = "#{goal.progress}%"
           %td
             = goal.est_completion
