--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -139,12 +139,65 @@
               %p Cars
               %p Computers
               %p Volleyball
+              %p Playing the drums
             .col.col-md-6.col-xs-6
               %p Music / speakers
               %p Golf
               %p Board games
               %p Social justice
-    .row
+              %p Hiking
+    .row.mb-5
       .col-12.col-md-8.offset-md-2
         = partial 'partials/books'
+    .row.mb-5
+      .col-12.col-md-8.offset-md-2
+        %h3
+          Favorite music artists
+        %p
+          According to my Spotify analytics my top artist for 2019 was a band
+          called Our Last Night. 68% of my time is spent listening to rap and
+          hip-hop. This (loosely) translates to my rock music selections being
+          more specific, given a rock band was my top artist last year.
+        %p
+          Here are some of my favorite music artists**:
+          .row
+            .col.col-md-6.col-xs-6
+              %p Our Last Night
+              %p Bring Me The Horizon
+              %p Migos
+              %p Future
+              %p Lil Skies
+              %p Lil Wayne*
+              %p Drake
+              %p Blink 182
+              %p Travis Scott*
+              %p Kane Brown
+              %p Gucci Mane*
+              %p Khalid
+              %p Louis The Child*
+              %p Avicii
+              %p TroyBoi*
+              %p Illenium*
+            .col.col-md-6.col-xs-6
+              %p Nirvana
+              %p Diplo*
+              %p A Day To Remember
+              %p Green Day
+              %p Linkin Park
+              %p Sum 41
+              %p Lil Baby
+              %p Da Baby
+              %p Torey Lanez*
+              %p Justin Bieber
+              %p Flume*
+              %p MGK
+              %p Young Thug
+              %p Halsey
+              %p Roddy Ricch
+              %p Red Hot Chili Peppers*
+        %p
+          %small.font-italic.text-muted
+            * I've seen them perform live.
+            %br
+            ** This is not, by any means, a full list.
   = partial 'partials/footer'
