--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -22,8 +22,11 @@ ul, li {
 a, a:hover {
   color: $theme-teal;
 }
-
 nav {
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
+
   a {
     color: black;
 
