--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -66,6 +66,10 @@ nav {
   }
 }
 
+.dark-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+
 .theme-teal-text {
   color: $theme-teal !important;
 }
@@ -86,7 +90,7 @@ nav {
 
 #books {
   .card-columns {
-    column-count: 4;
+    column-count: 6;
   }
 }
 
@@ -214,12 +218,6 @@ nav {
 
   .circle-image {
     width: 100%;
-  }
-
-  #books {
-    .card-columns {
-      column-count: 1;
-    }
   }
 
   #content.active {
